Feature/delete route ets in cycle time search (#1181)
¿Por qué hay que hacer este cambio?

Porque el endpoint /cycle_time/search hace consultas a route ets que no estamos usando y esto nos ensucia la metrica de datadog que estamos mandando cuando route ets no nos devuelve un processing time